5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1791_3139.log
== TEST (2019-05-29 14:36:05) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))
M((v[0]**1/3 + v[1]**1/3 + v[2]**1/3)/size(vetor))
print(round(M), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:36) 
-- CODE:
from numpy import *
vetor = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[2]**1/3)/size(vetor))
print(round(M), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:10) 
-- CODE:
from numpy import *
v = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[2]**1/3)/size(v))
print(round(M), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:37:32) 
-- CODE:
from numpy import *
v = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[2]**1/3)/size(v))
print(round(M), 2)
-- EXECUTION TIME:
0.371837
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.6
---- user output:
0.0 2
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.49
---- user output:
0.0 2
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.85
---- user output:
0.0 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:09) 
-- CODE:
from numpy import *
v = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[3]**1/3)size(v))**3
print(round(M), 2)
-- ERROR:
File "XXXX", line 3
    M = ((v[0]**1/3 + v[1]**1/3 + v[3]**1/3)size(v))**3
                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:23) 
-- CODE:
from numpy import *
v = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[3]**1/3)/size(v))**3
print(round(M), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:59) 
-- CODE:
from numpy import *
v = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[2]**1/3)/size(v))**3
print(round(M), 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:34) 
-- CODE:
from numpy import *
v = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[2]**1/3)/size(v))**3
print(round(M),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:09) 
-- CODE:
from numpy import *
v = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[2]**1/3)/size(v))**3
print(round(M, 2)
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:11) 
-- CODE:
from numpy import *
v = array(eval(input("vetor: ")))
M = ((v[0]**1/3 + v[1]**1/3 + v[2]**1/3)/size(v))**3
print(round(M, 2)
-- ERROR:
File "XXXX", line 5
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
